<resources>
    <string name="app_name">Quản lý mượn trả sách </string>
    <string name="menu_phieumuon">Quản lí phiếu mượn</string>
    <string name="menu_chao">Chao Mừng</string>
    <string name="menu_sach">Quản lí sách</string>
    <string name="menu_loaisach">Quản lí Loại sách</string>
    <string name="menu_thanhvien">Quản lí thành viên</string>
    <string name="menu_top10">10 sách mượn nhiều nhất</string>
    <string name="menu_doanhthu">Doanh thu</string>
    <string name="menu_themNguoiDung">Thêm người dùng</string>
    <string name="menu_doiMk">Đổi mật khẩu</string>
    <string name="menu_dangXuat">Đăng xuất</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>